# borrow

./: .gitignore  .prettierignore  .release-please-manifest.json  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  commitlint.config.ts  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml  release.yml
.vite-hooks/: commit-msg
apps/: README.md
apps/cli/: Cargo.toml  README.md  project.json
apps/cli/src/: lib.rs  main.rs
apps/cli/src/ms/: mod.rs
apps/cli/src/start/: mod.rs
apps/cli/src/start/lib/: download_template.rs  mod.rs  prompt.rs  template_parser.rs  utils.rs
apps/cli/src/start/templates/: mod.rs
apps/cli/src/start/templates/url_mapper/: mod.rs
apps/docs/: .gitignore  api.yaml  generate-docs.js  next.config.mjs  next.config.ts  open-next.config.ts  package.json  source.config.ts  tsconfig.json  wrangler.jsonc
apps/docs/app/: global.css  layout.tsx
apps/docs/app/[[...slug]]/: page.tsx
apps/docs/components/: SearchDialog.tsx  mdx.tsx
apps/docs/content/: introduction.mdx  meta.json
apps/docs/content/api/: meta.json  rate-limiting.mdx
apps/docs/content/docval/: fumadocs.mdx  index.mdx  limitations.mdx  meta.json  options.mdx  quick-start.mdx
apps/docs/content/limiter/: algorithms.mdx  index.mdx  meta.json  quick-start.mdx  self-hosting.mdx
apps/docs/content/ms/: cli.mdx  (+1 more)
apps/docs/lib/: layout.shared.tsx  openapi.js  shared.ts  source.ts
patches/: fumadocs-docgen.patch
(+13 files in other folders)
