[package]
name = "borrow-dev"
version = "0.1.0"
authors=["Lorenzo Bloedow <dev@lorenzobloedow.com>"]
license = "MIT"
edition = "2024"
description = "Official CLI for Borrow tools"
homepage = "https://github.com/borrowdev/borrow"
repository = "https://github.com/borrowdev/borrow"
keywords = ["cli", "toolkit", "template", "boilerplate"]
categories = ["command-line-utilities"]

[[bin]]
name = "borrow"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "unicode", "wrap_help"] }
inquire = "0.7.5"
walkdir = "2"
dirs = "6"
git2 = "0.20.2"